--- a/main.ipynb
+++ b/main.ipynb
@@ -43,11 +43,21 @@
     "df_stats = pd.DataFrame(counts, columns=['category', 'number_of_comments'])\n",
     "df_stats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "cat_names = df.head()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit (microsoft store)",
+   "display_name": "Python 3.9.13 ('data-solve')",
    "language": "python",
    "name": "python3"
   },
@@ -61,12 +71,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4e6c479f0cb5e8abbc4b80f3058a8828aa8f9f2ab9ec93d8b4d071b074d2f325"
+    "hash": "fbb98dd614b8b15df8662d9cc9a47c2e2126f9d311487ecfbfd723e062b9e387"
    }
   }
  },
